--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "Test",
+  "name": "dotmappers",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -14,5 +14,10 @@
     "mongoose": "^4.3.6",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-open": "^1.0.0"
   }
 }
